--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ img {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 5px;
     row-gap: 50px;
+    justify-items: center;
   }
 
   .team-member:nth-child(3),
